--- a/admin-server/views/layout/header.ejs
+++ b/admin-server/views/layout/header.ejs
@@ -24,6 +24,9 @@
                 <a href="/joblist" class="border-transparent hover:border-gray-300 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
                   Jobs Listed
                 </a>
+                <a href="/internshiplist" class="border-transparent hover:border-gray-300 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
+                  Internship Listed
+                </a>
                 <a href="/applicantlist" class="border-transparent hover:border-gray-300 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
                   Applicants Listed
                 </a>
