--- a/applicant-server/views/internship-list.ejs
+++ b/applicant-server/views/internship-list.ejs
@@ -234,7 +234,7 @@
                                         <span class="inline-block px-3 py-1 text-sm font-medium text-red-500 bg-red-100 rounded-full">  
                                             Expiry: 
                                             <td class="inline-block px-3 py-1 text-sm font-medium text-red-500 bg-red-100 rounded-full">
-                                              <%= new Date(int.intExpiry).toLocaleDateString('en-GB') %>
+                                              <%= (int.intExpiry > Date.now() ? new Date(int.intExpiry).toLocaleDateString('en-GB') : "Expired") %>
                                             </td>
                                         </span>
                                     </div>
